# challenges

./: .gitignore  README.MD
codewars/abbreviate_name/: main.go
codewars/alphabet_simmetry/: main.go
codewars/alternative_case/: main.go
codewars/arithmetic/: main.go
codewars/beginner_map/: main.go
codewars/between/: main.go
codewars/bit_counting/: main.go
codewars/calculate_years/: main.go
codewars/cascading_subsets/: main.go
codewars/century_year/: main.go
codewars/clock/: main.go
codewars/count_divisors/: main.go
codewars/count_positives_sum_negatives/: main.go
codewars/count_sheep/: main.go
codewars/counting_sheep/: main.go
codewars/create_phone_number/: main.go
codewars/derive/: main.go
codewars/encript_this/: main.go
codewars/even_odd/: main.go
codewars/factorial/: main.go
codewars/fake_bin/: main.go
codewars/find_smallest/: main.go
codewars/find_unique_number/: main.go
codewars/func_add/: main.go
codewars/gonna_survive/: main.go
codewars/grade_book/: main.go
codewars/grasshopper_check_factor/: main.go
codewars/grasshopper_game/: main.go
codewars/grasshopper_summation/: main.go
codewars/grasshopper_terminal_move/: main.go
codewars/growth_population/: main.go
codewars/hoop_count/: main.go
codewars/human_readable_time/: main.go
codewars/indexed_capitalization/: main.go
codewars/invert_values/: main.go
codewars/jaden_case/: main.go
codewars/keep_hydrated/: main.go
codewars/make_upper_case/: main.go
codewars/messi_goals/: main.go
codewars/middle_character/: main.go
diff_squares/virusxdrj-diff_squares/python-diff_squares/: pyproject.toml
diff_squares/virusxdrj-diff_squares/python-diff_squares/python_diff_squares/: main.py
dio/bank_api/: .env.example  Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml
dio/bank_api/bank_api/: urls.py
dio/bank_api/bank_api/contrib/: errors.py  models.py  repositories.py
dio/bank_api/bank_api/controllers/: accounts.py  transactions.py
dio/bank_api/bank_api/core/: auth.py  config.py  database.py  security.py  token.py
dio/bank_api/bank_api/dependencies/: auth.py  database.py  token.py
dio/bank_api/bank_api/models/: accounts.py  transaction.py
dio/bank_api/bank_api/repositories/: accounts.py  transactions.py
dio/bank_api/bank_api/schemas/: accounts.py  response.py
dio/bank_api/migrations/: env.py
dio/bank_api/migrations/versions/: 092da3817649_change_password_column_size.py  0c57f6693e56_add_migration_to_transactiontypeenum_.py  21330e9410f9_fix_status_enum_name_and_add_arg_create_.py  41af4d666ce6_create_accounts_table.py  47e3511d327c_add_password_and_role_column_in_.py  590b96eb849a_add_native_support_to_enums_from_.py  66e324a9326b_add_migration_to_transactiontypeenum_.py  86388c52a7e0_change_type_annotations_in_enums.py  cc91124fd8d2_add_transaction_table.py  e978d017fb55_add_status_column_and_.py
dio/bank_api/src/core/: config.py  database.py
dio/wallet_challenge/: Cargo.toml  docker-compose.yaml
dio/wallet_challenge/src/: app.rs  error.rs  lib.rs  main.rs  repository.rs
dio/wallet_challenge/src/models/: assets.rs
dio/wallet_challenge/src/routes/: api.rs
dio/wallet_challenge/src/routes/fixtures/: bitcoin_asset.sql
dio/workout_api/: README.md  alembic.ini  docker-compose.yaml  example.env  pyproject.toml
dio/workout_api/workout_api/: api.py  make.py  urls.py
dio/workout_api/workout_api/contrib/: __init__.py  models.py  schemas.py
dio/workout_api/workout_api/controllers/: __init__.py  athlete.py  category.py  training_center.py
dio/workout_api/workout_api/core/: __init__.py  config.py  database.py  dependencies.py
dio/workout_api/workout_api/migrations/: env.py
dio/workout_api/workout_api/migrations/versions/: eda48469be9e_init_db.py
dio/workout_api/workout_api/models/: __init__.py  athlete.py  category.py  training_center.py
dio/workout_api/workout_api/schemas/: __init__.py  athlete.py  category.py  training_center.py
hello/virusxdrj-hello/python-hello/: pyproject.toml
reverse/: reverse.md
reverse/virusxdrj-reverse/python-reverse/: pyproject.toml
xor_operator/: main.go
(+326 files in other folders)
