[package]
name = "wallet_challenge"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.9", features = ["macros"] }
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros"] }
color-eyre = "0.6.5"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
sqlx = { version = "0.9.0", features = ["macros", "runtime-tokio", "postgres"] }
sqlx-cli = { version = "0.9.0", features = ["postgres"] }
dotenvy = "0.15.7"

[dev-dependencies]
insta = { version = "1.48.0", features = ["json"] }
