[tool.poetry]
name = "workout-api"
version = "0.1.0"
description = ""
authors = ["joaooliveira247 <https://github.com/joaooliveira247>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.0"
uvicorn = "^0.29.0"
sqlalchemy = "^2.0.29"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
