[tool.poetry]
name = "python-diff-squares"
version = "0.1.0"
description = ""
authors = ["joaooliveira247 <joaooliveira247@gmail.com>"]
readme = "README.md"
packages = [{include = "python_diff_squares"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
