[tool.poetry]
name = "python-hello"
version = "0.1.0"
description = ""
authors = ["joaooliveira247 <joaooliveira247@gmail.com>"]
readme = "README.md"
packages = [{include = "python_hello"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
